--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero-section">
         <div class="video-background">
-            <video autoplay loop muted playsinline><source src="fake.mp4" type="video/mp4"></video>
+            <video autoplay loop muted playsinline><source src="hero.mp4" type="video/mp4"></video>
         </div>
         <div class="container">
             <div class="hero-content-wrapper">
@@ -77,7 +77,7 @@
                 <div class="card anim-element" style="--delay: 0.2s;">
                     <img src="d3.png" alt="A map of a city with pins">
                     <div class="card-content">
-                        <h3>Event Locations</h3>
+                        <h3>Fun zone locations</h3>
                         <p>Find your way to the main event areas and fan zones with our interactive location guide and maps.</p>
                         <button class="card-cta" data-modal-target="#locations-modal">Find Us</button>
                     </div>
@@ -91,9 +91,9 @@
     <section id="register" class="register-section">
         <div class="container">
             <div class="register-content register-anim">
-                <h2 class="section-title">Join The Fan Hub</h2>
+                <h2 class="section-title">JJoin the Fun Club <br>"Don't Miss Out!"</h2>
                 <p class="section-subtitle">
-                    Sign up for exclusive content, live race updates, and chances to win prizes from Bralirwa.
+                    build Friendships, be invited to exclusive events, live race updates, and chances to win prizes from Bralirwa.
                 </p>
 
                 <!-- Social Signup -->
