--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section id="register" class="register-section">
         <div class="container">
             <div class="register-content register-anim">
-                <h2 class="section-title">JJoin the Fun Club <br>"Don't Miss Out!"</h2>
+                <h2 class="section-title">Join the Fun Club <br>"Don't Miss Out!"</h2>
                 <p class="section-subtitle">
                     build Friendships, be invited to exclusive events, live race updates, and chances to win prizes from Bralirwa.
                 </p>
