--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
 <body>
 
 <!-- Header -->
+<!-- Header -->
 <header class="main-header">
     <div class="container">
         <a href="index.html" class="logo">
             <img src="logo2.png" alt="Kigali 2025 Logo">
         </a>
+        <!-- Hamburger Menu Button is back -->
+        <button class="menu-toggle" aria-label="Open Navigation Menu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </button>
         <ul class="nav-links">
             <li><a href="#hero">Discover UCI</a></li>
             <li><a href="#discover">The Bralirwa Fan Zone Experience</a></li>
@@ -43,8 +50,7 @@
             <div class="hero-content-wrapper">
                 <div class="hero-text">
                     <div class="sponsor-banner hero-anim-item">
-                        <span class="sponsor-text">Proud Beverage Sponsor Of</span>
-                        <img src="logo2.png" alt="UCI 2025 Road World Championships Logo" class="sponsor-logo-img">
+                        <span class="sponsor-text">Bralirwa proud beverage sponsor</span>
                     </div>
                     <h1 class="hero-anim-item">Bralirwa brings the world to ride <br><span>in Rwanda</span></h1>
                     <p class="hero-anim-item">Welcome to the official fan hub, proudly sponsored by Bralirwa. Immerse yourself in the electric atmosphere where cycling passion meets vibrant culture.</p>
@@ -175,7 +181,6 @@
                     </ul>
                     <hr>
                     <form class="modal-form">
-                        <p>Sign up now for exclusive giveaway alerts!</p>
                         <input type="text" placeholder="Your Name" required>
                         <input type="email" placeholder="Your Email" required>
                         <button type="submit" class="btn">Enter</button>
