--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     </div>
                     <h1 class="hero-anim-item">Bralirwa brings the world to ride <br><span>in Rwanda</span></h1>
                     <p class="hero-anim-item">Welcome to the official fan hub, proudly sponsored by Bralirwa. Immerse yourself in the electric atmosphere where cycling passion meets vibrant culture.</p>
+                    <a href="#discover" class="cta-button hero-anim-item">Explore The Event</a>
                 </div>
             </div>
         </div>
@@ -177,6 +178,10 @@
                         <li>
                             <i class="fas fa-bicycle"></i>
                             <div class="activity-text"><strong>Spin Classes:</strong><span>Join high-energy spin sessions throughout the day.</span></div>
+                        </li>
+                        <li>
+                            <i class="fab fa-playstation"></i>
+                            <div class="activity-text"><strong>PlayStation Challenge:</strong><span>Compete for prizes in our gaming zone.</span></div>
                         </li>
                     </ul>
                     <hr>
