--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="sponsor-banner hero-anim-item">
                         <span class="sponsor-text">Bralirwa proud beverage sponsor</span>
                     </div>
-                    <h1 class="hero-anim-item">Bralirwa brings the world to ride <br><span>in Rwanda</span></h1>
+                    <h1 class="hero-anim-item">Join Bralirwa in Riding New Heights at UCI <br><span>Kigali 2025!</span></h1>
                     <p class="hero-anim-item">Welcome to the official fan hub, proudly sponsored by Bralirwa. Immerse yourself in the electric atmosphere where cycling passion meets vibrant culture.</p>
                 </div>
             </div>
@@ -140,6 +140,14 @@
             </div>
         </footer>
     </section>
+    <!-- UCI Rainbow Stripe Banner -->
+    <div class="uci-stripe-banner">
+        <div class="stripe uci-blue"></div>
+        <div class="stripe uci-red"></div>
+        <div class="stripe uci-black"></div>
+        <div class="stripe uci-yellow"></div>
+        <div class="stripe uci-green"></div>
+    </div>
 </main>
 
 <!-- Fun Zone Modal -->
