--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="sponsor-banner hero-anim-item">
                         <span class="sponsor-text">Bralirwa proud beverage sponsor</span>
                     </div>
-                    <h1 class="hero-anim-item">Join Bralirwa in Riding New Heights at UCI <br><span>Kigali 2025!</span></h1>
+                    <h1 class="hero-anim-item">Spotlight on Kigali every <br><span>Turn Refreshed</span></h1>
                     <p class="hero-anim-item">Welcome to the official fan hub, proudly sponsored by Bralirwa. Immerse yourself in the electric atmosphere where cycling passion meets vibrant culture.</p>
                 </div>
             </div>
