--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 
 <main>
     <section id="hero" class="hero-section">
-        <div class="video-background">
-            <video autoplay loop muted playsinline><source src="hero.mp4" type="video/mp4"></video>
-        </div>
+        <!-- The video background element has been removed -->
+
         <div class="container">
             <div class="hero-content-wrapper">
                 <div class="hero-text">
