--- a/index.html
+++ b/index.html
@@ -21,30 +21,34 @@
 <body>
 
 <!-- Header -->
-<!-- Header -->
 <header class="main-header">
     <div class="container">
         <a href="index.html" class="logo">
             <img src="logo2.png" alt="Kigali 2025 Logo">
         </a>
-        <!-- Hamburger Menu Button is back -->
+        <!-- Hamburger Menu Button -->
         <button class="menu-toggle" aria-label="Open Navigation Menu">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
         </button>
+        <!-- NAVIGATION LINKS UPDATED HERE -->
         <ul class="nav-links">
-            <li><a href="#hero">Discover UCI</a></li>
-            <li><a href="#discover">The Bralirwa Fan Zone Experience</a></li>
-            <li><a href="#register">Fan Zone Location/schedule</a></li>
+            <li>
+                <a href="https://www.uci.org/competition-hub/2025-uci-road-world-championships/7mnrx8NLAbor8iWnlpCuwe?tab=overview" target="_blank" rel="noopener noreferrer">Discover UCI</a>
+            </li>
+            <li>
+                <a href="#" data-modal-target="#fun-zone-modal">The Bralirwa Fan Zone Experience</a>
+            </li>
+            <li>
+                <a href="#" data-modal-target="#locations-modal">Fan Zone Location/schedule</a>
+            </li>
         </ul>
     </div>
 </header>
 
 <main>
     <section id="hero" class="hero-section">
-        <!-- The video background element has been removed -->
-
         <div class="container">
             <div class="hero-content-wrapper">
                 <div class="hero-text">
@@ -56,8 +60,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- This is the decorative logo -->
         <img src="brlogo.png" alt="Rwanda Map Decoration" class="hero-decoration-logo">
     </section>
 
@@ -99,8 +101,6 @@
 
     <!-- REGISTER & FOOTER SECTION -->
     <section id="register" class="register-section">
-
-
         <footer class="site-footer register-anim">
             <div class="container footer-grid">
                 <div class="footer-col">
@@ -128,9 +128,10 @@
                 <div class="footer-col">
                     <h4>Follow Us</h4>
                     <div class="social-icons">
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-                        <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/bralirwaplc/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/bralirwa-plc/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/bralirwaplc/" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="https://x.com/bralirwaplc" aria-label="X"><i class="fab fa-x-twitter"></i></a>
                     </div>
                 </div>
             </div>
@@ -213,7 +214,6 @@
                     <hr>
                     <h4>How to Get There</h4>
                     <p>For detailed maps and directions to the main venues, use our location guide.</p>
-                    <!-- This button will close this modal and open the other one -->
                     <button class="btn-secondary" data-modal-target="#locations-modal" data-modal-switch="true">
                         Open Location Guide
                     </button>
@@ -232,7 +232,6 @@
             <p>Follow our guides to get to the action smoothly.</p>
         </div>
         <div class="modal-body">
-            <!-- The tab system has been removed for simplicity -->
             <div class="location-content">
                 <h4>Kigali Convention Centre</h4>
                 <p>This is the central hub for the event. All shuttles lead here.</p>
