--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://www.uci.org/competition-hub/2025-uci-road-world-championships/7mnrx8NLAbor8iWnlpCuwe?tab=overview" target="_blank" rel="noopener noreferrer">Discover UCI</a>
             </li>
             <li>
-                <a href="#" data-modal-target="#fun-zone-modal">The Bralirwa Fan Zone Experience</a>
+                <a href="#" data-modal-target="#fun-zone-modal">The Bralirwa Fan Zone Experiences</a>
             </li>
             <li>
                 <a href="#" data-modal-target="#locations-modal">Fan Zone Location/schedule</a>
