--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <h4>Fan Zone Locations</h4>
                     <ul class="locations-list">
                         <li><i class="fas fa-map-marker-alt"></i> <strong>Nyabugogo:</strong> Sept 21 - 24</li>
-                        <li><i class="fas fa-map-marker-alt"></i> <strong>The print house:</strong> Sept 21 - 24</li>
+                        <li><i class="fas fa-map-marker-alt"></i> <strong>Prince House:</strong> Sept 21 - 24</li>
                         <li><i class="fas fa-map-marker-alt"></i> <strong>Woodland:</strong> Sept 24 - 28</li>
                         <li><i class="fas fa-map-marker-alt"></i> <strong>Kigali Heights:</strong> Sept 21 - 28</li>
                     </ul>
